# plex-sub-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_SUCCESS.md  Dockerfile  FINAL_DEPLOYMENT.md  HOW_IT_WORKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEW_FEATURES.md  README.md  RELEASE_NOTES.md  SUBSOURCE_INTEGRATION.md  TRANSLATION_APPROVAL_GUIDE.md  UPDATE_NOTES.md  V030_RELEASE.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml  secret-scan.yml
app/: config.py  main.py
app/clients/: cache_client.py  openai_translation_client.py  opensubtitles_client.py  plex_client.py  subdl_client.py  subsource_client.py  subtitle_match_validator_client.py  subtitle_provider.py  subtitle_provider_manager.py  sync_client.py  telegram_client.py
app/models/: runtime_config.py  settings.py  subtitle.py  webhook.py
app/routes/: logs.py  setup.py  subtitles.py  sync.py  translation.py
app/services/: config_store.py  stats_store.py  subtitle_service.py
app/templates/: base.html  logs.html  settings.html  setup.html  sync.html  translation.html
app/utils/: log_buffer.py  logger.py
data/: config.example.json  config.json
docs/: api.md  architecture.md  configuration.md  development.md  features.md
tests/: test_config_store.py  test_opensubtitles_client.py  test_plex_client.py  test_plex_client_language_dedup.py  test_subdl_client.py  test_subsource_client.py  test_subtitle_match_validation.py  test_subtitle_match_validator_client.py  test_subtitle_provider_manager.py  test_subtitle_search_override.py
